bump apple silicon